src/main/java/com/example/cookiecookie/core/error/exception/BusinessException.java
package com.example.cookiecookie.core.error.exception;

import com.example.cookiecookie.core.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(String message, ErrorCode errorCode) {
        super(message);
        this.errorCode = errorCode;
    }

}
